WIP periodisering av omsorgen for